BUG - broken style in thumbnail

--- a/src/scss/atoms/inputs/_inputs-admin.scss
+++ b/src/scss/atoms/inputs/_inputs-admin.scss
@@ -73,6 +73,6 @@
   margin-bottom: 0.75rem;
 }
 
-.description {
+form .description {
   @extend %bobby;
 }
